# SeggerSysView

./: CMakeLists.txt  README.md
Config/: SEGGER_RTT_Conf.h
Sample/FreeRTOSV10/Patch/: FreeRTOSV10_Core.patch
contrib/cortex_m4_freertos/: CMakeLists.txt  SEGGER_SYSVIEW_FreeRTOS.c  SEGGER_SYSVIEW_FreeRTOS.h  sys_view_stubs.cpp
